# xhs

./: .gitignore  .replit  pyproject.toml  replit.nix  小红书项目_异地运行与结果说明.md
.agents/: agent_assets_metadata.toml
00_最近一次快照入口/: 最近一次快照路径.txt
attached_assets/: Pasted--data-cursor-score-items-model-type-note-note-card--177_1776800146334.txt  Pasted--data-user-id-6622dd2400000000070077a4-comments-create-_1776799578598.txt  Pasted--name-a1-value-19c46750bc4phbuztio5w4mlz02emps3ihk3uthc_1776802204533.txt  单博主爬取_黄金卢布道_25篇含评论_评论图片增强版_20260421_144805_1776806117362.xlsx
xhs/: README.md  api_server.py  build_deep_crawl_input.py  captcha_recover.py  comment_coverage_report.py  dashboard.html  exporter.py  materialize_raw_assets.py  oneclick.py  qa_xhs_pipeline.py  records.py  run_deep_iterative.py  run_xhs_pipeline.py  scraper.py  viewer.py
快照_20260421_221835/03_当前输出数据/: comment_coverage_20260421_081413.xlsx  comment_coverage_20260421_081413_summary.json  qa_pipeline_resilient_20260421_081252.json  resilient_crawl_report_20260421_081252.json  三博主算法升级验证_语料库识别_20260421_104906.xlsx  单博主爬取_黄金卢布道_15篇含评论_20260421_134938.xlsx  单博主爬取_黄金卢布道_25篇含评论_20260421_142624.xlsx  小红书基金图片识别与语义语料库_20260421_103516.json  小红书基金图片识别与语义语料库_20260421_103516.xlsx  小红书爬虫_质量诊断与运营分析_20260420_205649.xlsx  小红书爬虫_质量诊断与运营分析_20260420_205649_summary.json  小红书爬虫_质量诊断与运营分析_20260420_210005.xlsx  小红书爬虫_质量诊断与运营分析_20260420_210005_summary.json  小红书爬虫_质量诊断与运营分析_20260420_210359.xlsx  小红书爬虫_质量诊断与运营分析_20260420_210359_summary.json  小红书爬虫_质量诊断与运营分析_20260421_081426.xlsx  小红书爬虫_质量诊断与运营分析_20260421_081426_summary.json  (+4 more)
(+3203 files in other folders)
