[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.136.0",
    "numpy>=2.4.4",
    "openpyxl>=3.1.5",
    "pandas>=3.0.2",
    "pillow>=12.2.0",
    "playwright>=1.58.0",
    "pydantic>=2.13.3",
    "python-dateutil>=2.9.0.post0",
    "python-multipart>=0.0.26",
    "requests>=2.33.1",
    "uvicorn[standard]>=0.45.0",
]
